--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 											my own passions. Join us in getting to know as well learning valuable lessons from passionate 
 											people, leaders that are tasked with solving the ever growing number of problems we face today through research.
 										
-										  <a href="#" class="special">Learn more about the hosts</a> 
+										  <a href="https://ikarman4.github.io/aboutUs.html" class="special">Learn more about the hosts</a> 
 									</div>
 								</div>
 							</section> 
@@ -104,7 +104,7 @@
 											<a href="#" class="image"><img src="KyleBioPic-e1563549753639.png" alt=""  height="380"/></a>
 											<h3 class="major">Dr. Kyle Gobrogge</h3>
 											<p>Learn more about Dr. Gobrogge's research and academic career in this episode of Office Hours.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://ikarman4.github.io/episodes.html" class="special">Learn more</a>
 										</article>
 										<!--<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
@@ -126,7 +126,7 @@
 										</article> -->
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="https://ikarman4.github.io/episodes.html" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section> -->
