--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										<li><a href="https://ikarman4.github.io/episodes.html" class="button">Browse All</a></li>
 									</ul>
 								</div>
-							</section> -->
+							</section> 
 
 					</section>
 
