--- a/episodes.html
+++ b/episodes.html
@@ -63,7 +63,7 @@
 											<p>In this episode of Office Hours, Ian and Ankur sit down with their 'Principles of Neuroscience' lab professor
 												 Dr. Kyle Gobrogge to talk about his academic career and path into research.</p>
 												 <ul class="actions">
-														<li><a href="https://drive.google.com/open?id=1gwr3buSEdCGo_o295YzB3GTUH4BkZP-p" class="button">Listen</a></li>
+														<li><a href="https://drive.google.com/file/d/1gwr3buSEdCGo_o295YzB3GTUH4BkZP-p/view?usp=sharing" class="button">Listen</a></li>
 													</ul>
 											
 										</article>
