--- a/episodes.html
+++ b/episodes.html
@@ -71,10 +71,9 @@
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">"Are We Doing This Right"</h3>
 											<p>Ian and Ankur attempt to put into words the creation of this podcast and what they have planned for it.</p>
-											<audio controls>
-													<source src="https://drive.google.com/file/d/1xEp7266YPsnbV2E59iqe0evM0x8xZ8xM/view?usp=sharing" type="audio/mpeg">
-												  Your browser does not support the audio element.
-												  </audio>
+											<ul class="actions">
+													<li><a href="https://drive.google.com/file/d/1xEp7266YPsnbV2E59iqe0evM0x8xZ8xM/view?usp=sharing" class="button">Listen</a></li>
+												</ul>
 
 										</article>
 									</section>
