--- a/episodes.html
+++ b/episodes.html
@@ -60,9 +60,19 @@
 										<article>
 											<a href="#" class="image"><img src="KyleBioPic-e1563549753639.png" alt="image"  height="380" /></a>
 											<h3 class="major">Dr. Kyle Gobrogge</h3>
-											<p>In this episode of Office Hours, Ian and Ankur sit down with their 'Principles of Neuroscience' lab professor
-												 Dr. Kyle Gobrogge to talk about his academic career and path into research.</p>
-												 <ul class="actions">
+											<p>Dr. Kyle Gobrogge- A Comfort in Naivete, the Journey Begins
+													In this episode of Office Hours Ian and Ankur set up shop in the office of their 'Principles of Neuroscience' 
+													lab professor Dr. Kyle Gobrogge. An excellent teacher and an expert in the field of neurobiology, Dr. Gobrogge
+													 has won numerous awards for his work as an educator and  researcher, including the 2008 K. Patricia Cross 
+													 Future Leaders Fellowship of the AAC&U. To his students he is known as the “Fly Guy”, for what seems to be 
+													 his life mission to show to people the enormous potential of using fruit flies to study behavior. Throughout 
+													 his research career he has traveled all over the country using different models of study (human twins, prarie 
+													 voles, fruit flies) to try and chip away at the immense complexity of the circuitry underlying normal human 
+													 behaviors.<p> 
+											</p>In this first episode, we finally reveal what everybody is wondering…what fruit does Dr. Gobrogge identify as. 
+													During our discussion, we cover various topics ranging from traits of successful students in research to maintaining
+													 a work-life balance to the impact that policy can have on how research is conducted.</p>
+													 <ul class="actions">
 														<li><a href="https://drive.google.com/file/d/1gwr3buSEdCGo_o295YzB3GTUH4BkZP-p/view?usp=sharing" class="button">Listen</a></li>
 													</ul>
 											
