--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,7 +68,7 @@
 										<li align="left">Podcasts: The Hidden Brain, Comedy Bang Bang, Jeselnik & Rosenthal Vanity Project.</li>
 										<li align="left">Music: Landmark - Hippo Campus, Kirk - DaBaby , Soy Pablo - Boy Pablo</li>
 									  </ul></p>
-									<!-- <a href="#" class="special">Learn more</a> -->
+									<a href="https://ikarman4.github.io/VirtualBusinessCard/" class="special">Virtual Business Card</a> 
 								</div>
 							</div>
 						</section>
@@ -96,7 +96,7 @@
 										<li align="left">Book: Out on the Wire written by Jessica Abel. </li>
 										<li align="left">Podcasts: The Tim Ferriss Show Episode 107 - Jocko Willink.</li>														<li align="left">Album: A$AP Rocky - AT.LONG.LAST.ASAP.</li>
 									  </ul></p
-									  ><a href="#" class="special"></a>
+									  ><a href="https://ikarman4.github.io/AnkurBamezai/" class="special">Virtual Business Card</a>
 								</div> 
 							</div>
 						</section>
