--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><span class="fas fa-headphones"></span></div>
 							<h2>Office Hours</h2>
 							<p>An Intellectual Journey Guided Through Conversation <a href="http://html5up.net"></a></p>
 						</div>
