--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a> -->
 									<div class="content">
 										<h2 class="major">So What Is This?</h2>
-										<p align="left"> Follow two very stupid, but curious kids as they navigate and explore big, 
-											seemingly intangible  questions all people interested in research struggle with: what 
-											differentiates prolific researchers from those around them, are there topics or problems 
-											worth spending a lifetime studying, what are the actionable steps that could help elucidate 
-											my own passions. Join us in getting to know as well learning valuable lessons from passionate 
-											people, leaders that are tasked with solving the ever growing number of problems we face today through research.
+										<p align="left"> Follow two curious kids as they navigate and explore big,
+											 seemingly intangible questions many people interested in research struggle with: What 
+											 differentiates prolific researchers from those around them? Which topics or problems 
+											 are worth spending a lifetime studying? What actionable steps can I take to illuminate
+											  my own interests? Join us in getting to know as well as learning from researchers who
+											   are deeply passionate about their work, the leaders that are tasked with solving the
+											    ever-growing number of problems we face today.
 										
 										  <a href="https://ikarman4.github.io/aboutUs.html" class="special">Learn more about the hosts</a> 
 									</div>
