--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											 seemingly intangible questions many people interested in research struggle with: What 
 											 differentiates prolific researchers from those around them? Which topics or problems 
 											 are worth spending a lifetime studying? What actionable steps can I take to illuminate
-											  my own interests? Join us in getting to know as well as learning from researchers who
+											  my own interests? Join us in getting to know, as well as learning from researchers who
 											   are deeply passionate about their work, the leaders that are tasked with solving the
 											    ever-growing number of problems we face today.
 										
