--- a/episodes.html
+++ b/episodes.html
@@ -59,8 +59,8 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="KyleBioPic-e1563549753639.png" alt="image"  height="380" /></a>
-											<h3 class="major">Dr. Kyle Gobrogge</h3>
-											<p>Dr. Kyle Gobrogge- A Comfort in Naivete, the Journey Begins
+											<h3 class="major">Dr. Kyle Gobrogge - A Comfort in Naivete, the Journey Begins</h3>
+											<p>
 													In this episode of Office Hours Ian and Ankur set up shop in the office of their 'Principles of Neuroscience' 
 													lab professor Dr. Kyle Gobrogge. An excellent teacher and an expert in the field of neurobiology, Dr. Gobrogge
 													 has won numerous awards for his work as an educator and  researcher, including the 2008 K. Patricia Cross 
