--- a/aboutUs.html
+++ b/aboutUs.html
@@ -53,7 +53,7 @@
 					<!-- One -->
 						<section id="one" class="wrapper spotlight style1">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="ian.jpg" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Ian Karman</h2>
 									<p align="left">Ian Karman is a student studying neuroscience and computer science at Boston University.
@@ -75,7 +75,7 @@
 					<!-- Two --> 
 						<section id="two" class="wrapper alt spotlight style2">
 							<div class="inner">
-								<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image"><img src="ankur.jpg" alt="" /></a>
 								<div class="content">
 									<h2 class="major">Ankur Bamezai </h2>
 									<p align="left">Ankur Bamezai is a sophomore at Boston University studying neuroscience and Entrepreneurship. 
