--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="episodes.html">Episodes</a></li>
-								<li><a href="aboutUs.html">About Us</a></li>
+								<!-- <li><a href="aboutUs.html">About Us</a></li> -->
 								
 								
 							</ul>
