--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 											   are deeply passionate about their work, the leaders that are tasked with solving the
 											    ever-growing number of problems we face today.
 										
-										  <a href="https://ikarman4.github.io/aboutUs.html" class="special">Learn more about the hosts</a> 
+										  <a href="https://ikarman4.github.io/VirtualBusinessCard/" class="special">Learn more about the Ian!</a> 
+										  <a href="https://ikarman4.github.io/AnkurBamezai/" class="special">Learn more about the Ankur!</a> 
 									</div>
 								</div>
 							</section> 
