--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 											   are deeply passionate about their work, the leaders that are tasked with solving the
 											    ever-growing number of problems we face today.
 										
-										  <a href="https://ikarman4.github.io/VirtualBusinessCard/" class="special">Learn more about the Ian!</a> 
-										  <a href="https://ikarman4.github.io/AnkurBamezai/" class="special">Learn more about the Ankur!</a> 
+										  <a href="https://www.linkedin.com/in/ian-karman-59a62418a/" class="special">Learn more about the Ian!</a> 
+										  <a href="https://www.linkedin.com/in/ankur-bamezai-819381185/" class="special">Learn more about the Ankur!</a> 
 									</div>
 								</div>
 							</section> 
